# pcd-py

./: .gitignore  Cargo.toml  README.md  README_zh.md  bench.py  build_wheels.sh  pyproject.toml  verify.py  verify_bytes.py
.github/workflows/: build-wheels.yml
src/: lib.rs
