[package]
name = "pcd-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "pcd_py"
crate-type = ["cdylib"]

[dependencies]
pcd-rs = { path = "../pcd-rs", features = ["memmap2", "rayon"] }
pyo3 = { version = "0.23.0", features = ["extension-module", "anyhow"] }
numpy = "0.23.0"
anyhow = "1.0.100"
ndarray = "0.16.1"

[build-dependencies]
maturin = "1.8.2"
