[package]
name = "pcd-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "pcd_py"
crate-type = ["cdylib"]

[dependencies]
pcd-rs = { version = "0.1.0", features = ["memmap2", "rayon"] }
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py38", "anyhow"] }
numpy = "0.23.0"
anyhow = "1.0.100"
ndarray = "0.16.1"

[build-dependencies]
maturin = "1.8.2"
