[package]
name = "pcd-py"
version = "0.1.2"
edition = "2024"
description = "`pcd-py` is a high-speed Python library for reading and writing PCD (Point Cloud Data) files, powered by a core implementation in Rust (`rs-pcd`). It integrates seamlessly with **NumPy** for efficient data handling."

[lib]
name = "pcd_py"
crate-type = ["cdylib"]

[dependencies]
rs-pcd = { version = "0.1.0", features = ["memmap2", "rayon"] }
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py38", "anyhow"] }
numpy = "0.23.0"
anyhow = "1.0.100"
ndarray = "0.16.1"

[build-dependencies]
maturin = "1.8.2"
