[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pcd-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "description"]
readme = "README.md"
authors = [
    { name = "bigpear0201", email = "bigpear0201@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "numpy >= 2.2.6",
]

[project.urls]
Homepage = "https://github.com/bigpear0201/pcd-py

[tool.maturin]
features = ["pyo3/extension-module"]
